# Woven-Core

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STYLE_GUIDE.md
.github/workflows/: deploy-docs.yml
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/engine/: architecture.mdx  build-run.mdx  graphics.mdx  index.mdx  systems.mdx
docs/src/content/docs/notes/: decision-log.mdx  devlog.mdx  index.mdx  questions.mdx
docs/src/content/docs/vulkan/: index.mdx  learning-plan.mdx  resources.mdx
shaders/: triangle.slang
src/: Application.cpp  Application.hpp  Logger.cpp  TracyMemory.cpp  main.cpp  pch.hpp
src/core/: Application.cpp  Application.hpp  FileSystem.cpp  FileSystem.hpp  Logger.cpp  Logger.hpp  TracyMemory.cpp
src/graphics/: Camera.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  RenderConstants.hpp  ShaderSystem.cpp  ShaderSystem.hpp  VulkanMemoryAllocator.cpp  volk.cpp
src/physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/scheduling/: TaskSchedulingSystem.cpp  TaskSchedulingSystem.hpp
src/window/: WindowSystem.cpp  WindowSystem.hpp
